@@ -42,7 +42,7 @@
 #include <dmalloc.h>
 #endif
 
-static char software_version[] = "$Id: mem.c,v 1.84 2003-05-14 18:49:08 freddy77 Exp $";
+static char software_version[] = "$Id: mem.c,v 1.85 2003-05-19 17:49:06 castellano Exp $";
 static void *no_unused_var_warn[] = { software_version,
 	no_unused_var_warn
 };
@@ -689,6 +689,8 @@ tds_alloc_socket(TDSCONTEXT * context, int bufsize)
 	tds_init_write_buf(tds_socket);
 	tds_socket->s = -1;
 	tds_socket->env_chg_func = NULL;
+	tds_socket->chkintr = NULL;
+	tds_socket->hndlintr = NULL;
 	return tds_socket;
       Cleanup:
 	tds_free_socket(tds_socket);
